refactor: remove demo application and related files
- Deleted the demo application including its package.json, styles, and components.
- Updated package-lock.json to reflect the new versioning and dependencies.
- Adjusted build script in package.json to include legacy output.
- Refactored index.ts to export RichTextEditor as default.
- Updated TypeScript configuration files for better compatibility and consistency.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   ],
   "scripts": {
     "dev": "vite",
-    "build": "tsup src/index.ts --dts --format esm,cjs --out-dir dist",
+    "build": "tsup src/index.ts --dts --format esm,cjs --legacy-output --out-dir dist",
     "lint": "eslint .",
     "preview": "vite preview"
   },
