docs: enhance package description and expand keywords in package.json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rich-text-editor-lib",
   "version": "0.0.2",
-  "description": "A reusable rich text editor React component.",
+  "description": "A reusable and responsive rich text editor React component.",
   "main": "dist/index.cjs",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
@@ -51,7 +51,38 @@
     "rich-text",
     "editor",
     "component",
-    "wysiwyg"
+    "wysiwyg",
+    "text",
+    "text editor",
+    "react component",
+    "typescript",
+    "html",
+    "contenteditable",
+    "toolbar",
+    "formatting",
+    "bold",
+    "italic",
+    "underline",
+    "strikethrough",
+    "lists",
+    "bullet list",
+    "numbered list",
+    "link",
+    "insert link",
+    "customizable",
+    "responsive",
+    "dark mode",
+    "lucide",
+    "lucide-react",
+    "accessibility",
+    "keyboard",
+    "reset",
+    "placeholder",
+    "error",
+    "live output",
+    "html output",
+    "open source",
+    "MIT"
   ],
   "author": "Adarsh Viswam",
   "license": "MIT"
